--- a/.github/workflows/NowSecure.yml
+++ b/.github/workflows/NowSecure.yml
@@ -1,10 +1,6 @@
 name: "NowSecure"
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
     branches: [ main ]
 
@@ -47,13 +43,18 @@ jobs:
         with:
           name: app
           
-      - name: NowSecure-SBOM
-        uses: nowsecure/nowsecure-sbom-action@v1
-        timeout-minutes: 90
+      - name: NowSecure
+        uses: nowsecure/nowsecure-action@v1
+        timeout-minutes: 120
         with:
           token: ${{ secrets.NS_TOKEN }}
-          app_file: k9mail-debug.apk
-          group_id: "602abed9-4c66-453d-8431-da0195b682de"
+          app_file: k9mail-debug.apk		# REPLACE: The path to an .ipa or .apk
+          group_id: 395b951b-b979-43db-8a85-a33807ba595a				# REPLACE: NowSecure Group ID
+          
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+         path: NowSecure.sarif
           
           
 
