--- a/.github/workflows/NowSecure.yml
+++ b/.github/workflows/NowSecure.yml
@@ -43,6 +43,10 @@ jobs:
         with:
           name: app
           
+          # NOTE: ripgrep is required for line-of-code identification.
+      - name: Install ripgrep
+        run: sudo apt-get install -y ripgrep
+          
       - name: NowSecure
         uses: nowsecure/nowsecure-action@v1
         timeout-minutes: 120
